--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .icon-button {
+    @apply text-gray-500 hover:text-gray-400 active:scale-95 transition-all cursor-pointer;
+  }
+}
