--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body * {
+  @apply transition-colors duration-200;
+}
+
 @layer components {
   .icon-button {
     @apply text-gray-500 hover:text-gray-400 active:scale-95 transition-all cursor-pointer;
